<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rach.test.android_notification.MainActivity" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_cloud"
        android:showAsAction="always"
        android:title="@string/action_cloud"/>
    <item
        android:id="@+id/action_touchactivity"
        android:title="@string/action_testactivity"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_touchanddrawactivity"
        android:title="@string/action_touchanddrawactivity"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_test"
        android:orderInCategory="100"
        android:title="@string/action_test"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>